
  [ Victor Thompson ]
  * Remove some deprecated code for the UbuntuShape image property.
  * Update app to use the Ubuntu Components version 1.3 (LP: #1508363)
  * Update canned mediastore.db schema version from 8 to 9 (LP: #1511585).
  * Update canned mediastore.db schema version from 9 to 10.
  * Add directions for updating and debugging schema version changes.

  [ Andrew Hayzen ]
  * Switch to using the new uc1.3 listitems within the SDK

 -- Bartosz Kosiorek <gang65@poczta.onet.pl>  Tue, 08 Sep 2015 10:08:49 +0200

music-app (2.2ubuntu1) vivid; urgency=medium

  [ Victor Thompson ]
  * Fix SongsView album art for albums and genres (LP: #1477366)
  * Fix to allow the LibraryEmptyState to work again (LP: #1478162)
  * Fix typo in README.autopilot and clarify the instructions
  * Show all README files in QtCreator
  * Force playlist tracks to sync (LP: #1483962)
  * Allow arrow keys to control the initial walkthrough (LP: #1482760)
  * Always fit the cover art to vertically fill the BlurredBackground

  [ Andrew Hayzen ]
  * Fix for console errors when using the parent changed helpers
  * Add support for a content-hub source in both single and multiple selection modes (LP: #1357324)

 -- Andrew Hayzen <ahayzen@gmail.com>  Sat, 05 Sep 2015 00:04:24 +0100

music-app (2.2) vivid; urgency=medium
  [ Andrew Hayzen ]
  * Bump framework to 15.04
  
 -- Andrew Hayzen <ahayzen@gmail.com>  Sat, 27 Jun 2015 21:30:23 +0100

music-app (2.1) vivid; urgency=medium

  [ Andrew Hayzen ]
  * Fixes and add preloading compatibility to ColumnFlow.qml.
  * Only autoset the source due to queue count changes when the queue worker has completed.
  * Improve the way the currentIndex is restored so that there is less/no delay.
  * Delay urlhandler/content-hub calls until after walkthrough is complete. Fixes: https://bugs.launchpad.net/bugs/1438317.
  * Make SongsView and ArtistView adaptive. Fixes: https://bugs.launchpad.net/bugs/1436771.