@@ -9,6 +9,7 @@ music-app (2.2ubuntu2) UNRELEASED; urgency=medium
   * Update canned mediastore.db schema version from 8 to 9 (LP: #1511585).
   * Update canned mediastore.db schema version from 9 to 10.
   * Add directions for updating and debugging schema version changes.
+  * Remove repeater for getting album titles in Artists.qml (LP: #1515067).
 
   [ Andrew Hayzen ]
   * Switch to using the new uc1.3 listitems within the SDK
